# parallel-attention

./: .clang-format  .gitignore  CMakeLists.txt  attention.c  attention_mpi.c  attention_thread.c
